--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ imageproc = "0.22.0"
 rand = "0.8.4"
 rocket = "0.5.0-rc.1"
 sha2 = "0.9.5"
+gethostname = "0.2.1"
 
 [features]
 default = ["sim"]
