Cleaned up clippy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,13 +28,15 @@ serde_derive = "1.0.118"
 serde = "1.0.118"
 imageproc = "0.22.0"
 rand = "0.8.4"
-rocket = "0.5.0-rc.1"
+rocket = {version="0.5.0-rc.1", optional=true}
 sha2 = "0.9.5"
 gethostname = "0.2.1"
+anyhow = "1.0.43"
 
 [features]
 default = ["sim"]
 
+web = ["rocket"]
 
 spi = ["rppal", "embedded-hal"]
 sim = ["embedded-graphics-simulator", "embedded-hal", "embedded-hal-mock"]
