--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-epd-waveshare = {path="../epd-waveshare"}
-#epd-waveshare = "0.5.0"
+#epd-waveshare = {path="../epd-waveshare"}
+epd-waveshare = {git="https://github.com/caemor/epd-waveshare", revision="b3f9bc8"}
 embedded-graphics = "0.7.1"
 rppal = {version="0.11.3", features=["hal", "hal-unproven"], optional=true}
 image = "0.23.14"
